# colmi-r02-firmware

./: .gitignore  README.md  requirements-analysis.txt
analysis/: ry02-accepted-baseline.json  ry02-bluex-armcc5-environment.json  ry02-bluex-armcc5-environment.txt  ry02-bluex-sdk-build-contract.txt  ry02-bluex-sdk3-adapter-materialization.json  ry02-bluex-sdk3-adapter-materialization.txt  ry02-bluex-sdk3-ringcli-adapter-source-gate.txt  ry02-bluex-sdk3-workspace-materialization.json  ry02-bluex-sdk3-workspace-materialization.txt  ry02-ringcli-known-constants.json  ry02-ringcli-protocol-contract.json  ry02-ringcli-protocol-contract.txt  ry02-v38-accepted-baseline-verification.txt  ry02-v38-symbol-map.csv
docs/: FINDINGS-2026-07-10.md  FIRMWARE-PROVENANCE.md  REPRODUCIBILITY.md
prototype/ringcli_compat/: CMakeLists.txt  README.md
prototype/ringcli_compat/bluex/: ry02_bluex_adapter_contract.c  ry02_bluex_adapter_contract.h
prototype/ringcli_compat/include/: ry02_ringcli_protocol.h
prototype/ringcli_compat/tests/: test_protocol.c
scripts/: build_ry02_bluex_adapter_keil.ps1  check_repo.sh
tools/: ATC_RF03_Writer_RY02_Guarded.html  ATC_RF03_Writer_RY02_Queued.html  analyze_bluex_sdk_build_contract.py  analyze_ota.py  analyze_ota_acceptance_headers.py  analyze_ry02_faster_raw_r1.py  analyze_ry02_internal_header.py  build_guarded_ry02_writer.py  build_guarded_ry02_writer_v2.py  build_ry02_faster_raw.py  compare_atc_ota_family.py  compare_ry02_33_38_raw_path.py  diff_payloads.py  dump_thumb_range.py  extract_bluex_sdk3_ringcli_adapter_contract.py  matching_blocks.py  (+36 more)
(+26 files in other folders)
